# lzbot

./: .env  .gitignore  README.md  bot.py  plugin.txt  pyproject.toml  requirements.txt
data/learning_chat/: learning_chat.db
data/setu/: setu_perm_cfg.json
laozhubot/plugins/jm_download/: __init__.py  config.py  option.yml  utils.py
laozhubot/plugins/setu/: __init__.py  config.py  fetch_resources.py  get_data.py  manager_handle.py  permission_manager.py  send_setu.py  setu_massage.py
laozhubot/plugins/setu/resource/: laozhu_setu.db
